Add endpoints for force
